--- a/Brandon Git/about-us-style.css
+++ b/Brandon Git/about-us-style.css
@@ -1,17 +1,40 @@
 /* style for about us page */
+body {
+    overflow-x: hidden;
+}
+
 section {
-    height: 700px;
+    min-height: 700px;
+}
+
+.button {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    padding: 1rem;
+    transition: all 0.3s;
+}
+
+.button:hover {
+    color: #112F24;
+    background-color: white;
 }
 
 .hero-banner {
+    height: 100vh;
     background-image: url('./about-us-hero-banner-image.jpeg');
 }
 
-.hero-banner h1, .hero-banner p, .our-customers h1, .our-customers p {
+.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p{
     color: white;
 }
 
 .motivation-section {
+    height: 700px;
     background-image: url('./about-us-hero-banner-image.jpeg');
 }
 
@@ -20,5 +43,19 @@ section {
 }
 
 .our-customers {
+    height: 700px;
     background-image: url('./about-us-hero-banner-image.jpeg');
+}
+
+.our-customers p, .our-customers h1 {
+    color: white;
+}
+
+.our-team {
+    padding: 10rem 0;
+    background-color: #41b188;
+}
+
+.our-team p {
+    font-weight: 300;
 }
