--- a/Ricardo/FAQ.css
+++ b/Ricardo/FAQ.css
@@ -261,3 +261,31 @@ body {
     padding-right: 10px;
 
 }
+
+.faq_box {
+    padding: 10px 180px 10px 180px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.faq_box .group_1 {
+    padding-bottom: 30px;
+}
+
+.faq_title {
+    padding: 10px 180px 10px 180px;
+    text-align: center;
+}
+
+.faq_title .text_area {
+    font-family: 'Playfair Display', serif;
+    color: green;
+    font-size: 2vw;
+
+}
+
+.place_holder {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
