--- a/Brandon Git/contact-us-style.css
+++ b/Brandon Git/contact-us-style.css
@@ -1,1 +1,86 @@
 /* style for contact us page */
+body {
+    overflow-x: hidden;
+}
+
+h1 {
+    font-weight: bold;
+    font-family: 'Playfair Display', serif !important; 
+}
+
+h2 {
+    font-family: 'Noto Sans', sans-serif !important;
+    font-weight: 700 !important;
+}
+
+p {
+    font-family: 'Noto Sans', sans-serif !important;
+    font-weight: 300 !important;
+}
+
+section {
+    min-height: 700px;
+}
+
+.button {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    padding: 1rem;
+    transition: all 0.3s;
+}
+
+.button:hover {
+    color: #112F24;
+    background-color: white;
+}
+
+.hero-banner {
+    height: 100vh;
+}
+
+.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p{
+    color: white;
+}
+
+.hero-banner-background {
+    background-image: url('./ContactUsBannerImage.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.quick-links {
+    padding: 10rem 10%;
+    background-color: white;
+}
+
+.quick-links p, .quick-links h1, .quick-links h2 {
+    color: #112F24;
+}
+
+.quick-links img {
+    width: 4rem;
+    height: 4rem;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.card {
+    background-color: #41b188 !important;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.card:hover {
+    transform: scale(110%);
+}
+
+.card h2, .card p {
+    color: white !important;
+}
