--- a/Brandon Git/contact-us-style.css
+++ b/Brandon Git/contact-us-style.css
@@ -43,7 +43,7 @@ section {
     height: 100vh;
 }
 
-.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p{
+.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p {
     color: white;
 }
 
@@ -53,12 +53,12 @@ section {
     background-size: cover;
 }
 
-.quick-links {
+.quick-links, .contact-form {
     padding: 10rem 10%;
     background-color: white;
 }
 
-.quick-links p, .quick-links h1, .quick-links h2 {
+.quick-links p, .quick-links h1, .quick-links h2, .contact-form h1, .contact-form p {
     color: #112F24;
 }
 
@@ -84,3 +84,49 @@ section {
 .card h2, .card p {
     color: white !important;
 }
+
+.contact-form input[type="text"], .contact-form textarea {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 300;
+    color: #112F24;
+} 
+
+.contact-form input[type="text"] {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #112F24;
+    width: 80%;
+    transition: all 0.3s;
+}   
+
+.contact-form input[type="text"]:hover {
+    transform: scale(110%) translateX(5%);
+}
+
+.contact-form input[type="text"]::placeholder {
+    color: #112F24;
+} 
+
+.contact-form textarea {
+    border: none;
+}
+
+.contact-form p {
+    font-weight: 400 !important;
+}
+
+.contact-info {
+    min-height: fit-content;
+}
+
+/* Google Icons */
+.material-symbols-outlined {
+    vertical-align: middle;
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 20
+}
+
+
