[Brandon] Style Adjustments - 'About Us' Page

--- a/Brandon Git/about-us-style.css
+++ b/Brandon Git/about-us-style.css
@@ -160,28 +160,30 @@ section {
 .hero-banner {
     height: 100vh;
     background-image: url('./about-us-hero-banner-image.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p{
+.hero-banner h1, .hero-banner p, .our-team h1, .our-team p {
     color: white;
+}
+
+.our-customers p, .our-customers h1, .motivation-section h1, .motivation-section p, .achievements p, .achievements h1, .achievements h2 {
+    color: #112F24
 }
 
 .motivation-section {
     height: 700px;
     background-image: url('./about-us-hero-banner-image.jpeg');
-}
-
-.motivation-section h1, .motivation-section p {
-    color: #112F24;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .our-customers {
     height: 700px;
     background-image: url('./about-us-hero-banner-image.jpeg');
-}
-
-.our-customers p, .our-customers h1 {
-    color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .our-team, .achievements {
@@ -198,8 +200,4 @@ section {
 
 .achievements {
     background-color: #febc60db;
-}
-
-.achievements p, .achievements h1, .achievements h2 {
-    color: #112F24;
 }
