--- a/Brandon Git/contact-us-style.css
+++ b/Brandon Git/contact-us-style.css
@@ -18,6 +18,125 @@ p {
     font-weight: 300 !important;
 }
 
+#fixedheader {
+    position: fixed;
+}
+
+.header {
+    margin: 0;
+    z-index: 100;
+    width: 100%;
+    padding: 0.5%;
+
+    background-color: white;
+
+    transition-duration: 0.4s;
+
+    box-shadow: 0px 0px grey;
+}
+
+
+.navbtn {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 300;
+    text-decoration: none;
+    color: #41B188;
+    cursor: pointer;
+    font-size: 1.2vw;
+
+}
+
+
+.navbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.navbtn:hover {
+    color: #41B188;
+
+}
+
+.logo {
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    text-decoration: none;
+    color: #41B188;
+    font-size: 2.7vw;
+    transition: all 0.3s linear;
+    white-space: nowrap;
+
+}
+
+.logo:hover {
+    color: #41B188;
+    /*animation: logoanimation 5s linear infinite;*/
+
+}
+
+.logopt2 {
+    color: #333333;
+}
+
+.logopt2:hover {
+    color: #333333;
+}
+
+
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: #333333;
+    font-weight: 300;
+}
+
+.hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #41B188;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.bookbtn {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 400;
+    border: none;
+    border-radius: 2px;
+    padding: 0.3vw 0.7vw;
+
+    white-space: nowrap;
+    font-size: 1.2vw;
+    transition: 0.25s ease-in-out;
+
+    color: white;
+    background-color: #41B188;
+
+    border: 0px #41B188 solid;
+}
+
+.bookbtn:hover {
+
+    color: white;
+    background-color: #FEBB60;
+    border: 0px #FEBB60 solid;
+
+}
+
 section {
     min-height: 700px;
 }
@@ -40,18 +159,19 @@ section {
 }
 
 .hero-banner {
-    height: 100vh;
-}
-
-.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p {
-    color: white;
-}
-
-.hero-banner-background {
+    min-height: 60vh;
     background-image: url('./ContactUsBannerImage.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.223);
+
+    padding: 5%;
+}
+
+.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p {
+    color: white;
 }
 
 .quick-links, .contact-form {
