--- a/css/about-us-style.css
+++ b/css/about-us-style.css
@@ -1,4 +1,4 @@
-/* style for contact us page */
+/* style for about us page */
 body {
     overflow-x: hidden;
 }
@@ -8,16 +8,16 @@ h1 {
     font-family: 'Playfair Display', serif !important; 
 }
 
-h2 {
-    font-family: 'Noto Sans', sans-serif !important;
-    font-weight: 700 !important;
-}
-
 p {
     font-family: 'Noto Sans', sans-serif !important;
     font-weight: 300 !important;
 }
 
+a {
+    text-decoration: none;
+}
+
+/*Start of Navbar*/
 #fixedheader {
     position: fixed;
 }
@@ -33,8 +33,8 @@ p {
     transition-duration: 0.4s;
 
     box-shadow: 0px 0px grey;
+    
 }
-
 
 .navbtn {
     font-family: 'Noto Sans', sans-serif;
@@ -42,17 +42,14 @@ p {
     text-decoration: none;
     color: #41B188;
     cursor: pointer;
-    font-size: 1.2vw;
+    font-size: 1rem
 
 }
-
 
 .navbox {
     display: flex;
     justify-content: center;
     align-items: center;
-
-
 }
 
 .navbtn:hover {
@@ -65,16 +62,14 @@ p {
     font-weight: 400;
     text-decoration: none;
     color: #41B188;
-    font-size: 2.7vw;
+    font-size: 2rem;
     transition: all 0.3s linear;
     white-space: nowrap;
-
 }
 
 .logo:hover {
     color: #41B188;
     /*animation: logoanimation 5s linear infinite;*/
-
 }
 
 .logopt2 {
@@ -84,8 +79,6 @@ p {
 .logopt2:hover {
     color: #333333;
 }
-
-
 
 .hover-underline-animation {
     display: inline-block;
@@ -120,7 +113,7 @@ p {
     padding: 0.3vw 0.7vw;
 
     white-space: nowrap;
-    font-size: 1.2vw;
+    font-size: 1rem;
     transition: 0.25s ease-in-out;
 
     color: white;
@@ -160,104 +153,123 @@ section {
 
 .hero-banner {
     min-height: 60vh;
-    background-image: url('./ContactUsBannerImage.jpg');
+    background-image: url('../assets/images/about-us-hero-banner-image.jpeg');
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
     background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.223);
+    background-color: rgba(0, 0, 0, 0.47);
 
     padding: 5%;
 }
 
-.hero-banner h1, .hero-banner p, .our-customers h1, .our-team h1, .our-team p {
+.hero-banner h1, .hero-banner p, .our-team h1, .our-team p {
     color: white;
 }
 
-.quick-links, .contact-form {
-    padding: 10rem 5%;
-    background-color: white;
+.our-customers p, .our-customers h1, .motivation-section h1, .motivation-section p, .achievements p, .achievements h1, .achievements h2 {
+    color: #112F24
 }
 
-.quick-links p, .quick-links h1, .quick-links h2, .contact-form h1, .contact-form p {
-    color: #112F24;
+.motivation-section, .our-customers {
+    height: 700px;
 }
 
-.quick-links img {
-    width: 4rem;
-    height: 4rem;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.our-team, .achievements {
+    padding: 10rem 0;
 }
 
-.card {
-    background-color: #41b188 !important;
-    cursor: pointer;
-    transition: all 0.2s;
+.our-team {
+    background-color: #41b188;
 }
 
-.card:hover {
-    transform: scale(110%);
-}
-
-.card h2, .card p {
-    color: white !important;
-}
-
-.contact-form input[type="text"], .contact-form textarea {
-    font-family: 'Noto Sans', sans-serif;
+.our-team p {
     font-weight: 300;
-    color: #112F24;
-} 
-
-.contact-form input[type="text"] {
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #112F24;
-    width: 80%;
-    transition: all 0.3s;
-}   
-
-.contact-form input[type="text"]:hover {
-    transform: scale(110%) translateX(5%);
 }
 
-.contact-form input[type="text"]::placeholder {
-    color: #112F24;
-} 
-
-.contact-form textarea {
-    border: none;
+.achievements {
+    background-color: #febc60db;
 }
 
-.contact-form p {
-    font-weight: 400 !important;
-}
-
-.contact-form .button {
-    color: #112F24;
-    border-color: #112F24;
-}
-
-.contact-form .button:hover {
+/* Start of Footer CSS*/
+.footer-container {
+    background-color: #41B188;
     color: white;
-    background-color: #112F24;
+    font-size: 1.1vw;
+    margin: 0;
 }
 
-.contact-info {
-    min-height: fit-content;
+.quicklinkscol {
+    margin-top: 3%;
 }
 
-/* Google Icons */
-.material-symbols-outlined {
-    vertical-align: middle;
-    font-variation-settings:
-    'FILL' 1,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 20
+.quicklinkstitle {
+    font-weight: 400;
+    padding-bottom: 2%;
+    color: white;
+}
+
+.quicklinks {
+
+    color: white;
+    transition: 0.2s ease-in-out
+}
+
+.quicklinks:hover {
+
+    color: #FEBB60;
+}
+
+.quicklinksdiv {
+    padding: 1%;
+}
+
+.midcol {
+    margin-top: 3%;
+}
+
+.midlinks {
+    font-weight: 400;
+    padding: 3%;
+}
+
+.contactcol {
+    margin-top: 3%;
+}
+
+.contactdiv {
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.footerlogorow {
+    padding-top: 2%;
+    padding-bottom: 3%;
+}
+
+.footer-logo {
+    color: white;
+    margin: 4%;
+    transition: 0.2s ease-in-out;
+}
+
+.footer-logo:hover {
+    color: #FEBB60;
+}
+
+/*End of footer css*/
+
+/* responsiveness */
+@media (max-width: 992px) {
+    .lg-display {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .lg-hidden {
+        display: none;
+    }
 }
 
 
