--- a/css/blog.css
+++ b/css/blog.css
@@ -34,87 +34,25 @@ body {
     position: fixed;
 }
 
-.header {
-    margin: 0;
-    z-index: 100;
-    width: 100%;
-    padding: 0.5%;
-
-    color: white;
-    background-color: #41B188;
-
-    transition-duration: 0.4s;
-}
-
-
+/*Start of Navbar*/
 .navbtn {
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 300;
     text-decoration: none;
-    color: white;
+    color: #41B188;
     cursor: pointer;
-    font-size: 1.2vw;
-
-}
-
-
-.navbox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
+    font-size: 1rem
 }
 
 .navbtn:hover {
-    color: #FEBB60;
-
+    color: #41B188;
 }
-
-.logo {
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
-    text-decoration: none;
-    color: white;
-    font-size: 2.7vw;
-    transition: all 0.3s linear;
-    white-space: nowrap;
-
-}
-
-.logo:hover {
-    animation: logoanimation 5s linear infinite;
-
-}
-
-@keyframes logoanimation {
-    0% {
-        color: white;
-    }
-
-    25% {
-        color: purple;
-    }
-
-    50% {
-        color: blue;
-    }
-
-    75% {
-        color: cornflowerblue;
-    }
-
-    100% {
-        color: white;
-    }
-
-}
-
 
 .hover-underline-animation {
     display: inline-block;
     position: relative;
-    color: white;
+    color: #333333;
+    font-weight: 300;
 }
 
 .hover-underline-animation:after {
@@ -125,7 +63,7 @@ body {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #FEBB60;
+    background-color: #41B188;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -136,29 +74,28 @@ body {
 }
 
 .bookbtn {
-    font-family: 'Playfair Display', serif;
-    font-weight: 600;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 400;
     border: none;
-    border-radius: 3px;
-    padding: 0.3vw 0.7vw;
     white-space: nowrap;
-    font-size: 1.2vw;
+    font-size: 1rem;
     transition: 0.25s ease-in-out;
-
     color: white;
-    background-color: #FEBB60;
+    background-color: #41B188;
 }
 
 .bookbtn:hover {
-    color: #FEBB60;
-    background-color: white;
+    color: white;
+    background-color: #FEBB60;
+    border: 0px #FEBB60 solid;
 }
+/*Navbar css ends here*/
 
 .hero-banner {
     min-height: 60vh;
     padding: 5%;
     color: white;
-    background-image: url(./covid_test.jpeg);
+    background-image: url(../assets/images/covid_test.jpeg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -168,7 +105,7 @@ body {
 
 .hero {
     height: 500px;
-    background-image: url(./covid_test.jpeg);
+    background-image: url(../assets/images/covid_test.jpeg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -249,7 +186,7 @@ body {
 .news_box_group .area_major {
     height: 300px;
     width: 65%;
-    background: url(./covid_test.jpeg) no-repeat;
+    background: url(../assets/images/covid_test.jpeg) no-repeat;
     background-size: cover;
 }
 
@@ -276,7 +213,7 @@ body {
 .news_box_group .area_sub {
     height: 300px;
     width: 32%;
-    background: url(./covid_test.jpeg) no-repeat;
+    background: url(../assets/images/covid_test.jpeg) no-repeat;
     background-size: 100% 60%;
 }
 
@@ -414,57 +351,25 @@ body {
 .footer-container {
     background-color: #41B188;
     color: white;
-    font-size: 1.1vw;
-    margin: 0;
-
-}
-
-.quicklinkscol {
-    margin-top: 3% !important;
-}
-
-.quicklinkstitle {
-    font-weight: 400;
-    padding-bottom: 2%;
-    color: white;
+    font-size: 1rem;
+    padding: 5rem 5%;
 }
 
 .quicklinks {
-
     color: white;
     transition: 0.2s ease-in-out
 }
 
 .quicklinks:hover {
-
     color: #FEBB60;
 }
 
 .quicklinksdiv {
-    padding: 1%;
-}
-
-.midcol {
-    margin-top: 3% !important;
-}
-
-.midlinks {
-    font-weight: 400;
-    padding: 3%;
-}
-
-.contactcol {
-    margin-top: 3% !important;
+    padding: 0.5rem;
 }
 
 .contactdiv {
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
-
-.footerlogorow {
-    padding-top: 2%;
-    padding-bottom: 3%;
+    padding: 0.5rem;
 }
 
 .footer-logo {
@@ -476,7 +381,6 @@ body {
 .footer-logo:hover {
     color: #FEBB60;
 }
-
 /*End of footer css*/
 
 .place_holder {
