--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -89,7 +89,7 @@ body {
     min-height: 60vh;
     padding: 5%;
     color: white;
-    background-image: url(../assets/images/covid_test.jpeg);
+    background-image: url(../assets/images/faq_hero.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -153,7 +153,7 @@ body {
     text-decoration: none;
     color: #34906e;
     cursor: pointer;
-    font-size: 2.5vw !important;
+    font-size: 5vw !important;
 }
 
 .text_container .text-area-left {
@@ -281,3 +281,19 @@ body {
     color: #FEBB60;
 }
 /*End of footer css*/
+.button {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    padding: 1rem;
+    transition: all 0.3s;
+}
+
+.button:hover {
+    color: #112F24;
+    background-color: white;
+}
