--- a/css/blog.css
+++ b/css/blog.css
@@ -208,6 +208,7 @@ body {
     color: black;
     font-size: 1rem;
     font-family: 'Noto Sans', sans-serif;
+    text-align: justify;
 }
 
 .news_box_group .area_sub {
