--- a/css/contact-us-style.css
+++ b/css/contact-us-style.css
@@ -132,7 +132,7 @@ section {
 }
 
 .button:hover {
-    color: #112F24;
+    color: #333333;
     background-color: white;
 }
 
@@ -158,7 +158,7 @@ section {
 }
 
 .quick-links p, .quick-links h1, .quick-links h2, .contact-form h1, .contact-form p {
-    color: #112F24;
+    color: #333333;
 }
 
 .quick-links img {
@@ -171,9 +171,10 @@ section {
 }
 
 .card {
-    background-color: #41b188 !important;
+    background-color: #41B188 !important;
     cursor: pointer;
     transition: all 0.2s;
+    border-color: #41B188;
 }
 
 .card:hover {
@@ -187,13 +188,13 @@ section {
 .contact-form input[type="text"], .contact-form textarea {
     font-family: 'Noto Sans', sans-serif;
     font-weight: 300;
-    color: #112F24;
+    color: #333333;
 } 
 
 .contact-form input[type="text"] {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #112F24;
+    border-bottom: 1px solid #333333;
     width: 80%;
     transition: all 0.3s;
 }   
@@ -203,7 +204,7 @@ section {
 }
 
 .contact-form input[type="text"]::placeholder {
-    color: #112F24;
+    color: #333333;
 } 
 
 .contact-form textarea {
@@ -215,13 +216,13 @@ section {
 }
 
 .contact-form .button {
-    color: #112F24;
-    border-color: #112F24;
+    color: #333333;
+    border-color: #333333;
 }
 
 .contact-form .button:hover {
     color: white;
-    background-color: #112F24;
+    background-color: #333333;
 }
 
 .contact-info {
